--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,10 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
+    <li><a href="#/dashboard">dashboard</a></li>
+    <li><a href="#/ping">ping</a></li>
+    <li><a href="#/merchant">merchant</a></li>
+    <li><a href="#/payment">payment</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -34,8 +36,10 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
+  <script src="dashboard/dashboard.js"></script>
+  <script src="ping/ping.js"></script>
+  <script src="payment/payment.js"></script>
+  <script src="merchant/merchant.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
