--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>Merchant Console :: Ping Social</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
@@ -21,6 +21,7 @@
   
   <app-header></app-header>
 
+<!-- todo: move this into a nav-bar directive -->
   <ul class="menu">
     <li><a href="#/dashboard">dashboard</a></li>
     <li><a href="#/ping">ping</a></li>
@@ -33,8 +34,6 @@
   <![endif]-->
       
   <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
