--- a/app/dashboard/dashboard.html
+++ b/app/dashboard/dashboard.html
@@ -1,7 +1,4 @@
-<ping-chart></ping-chart>
+<!-- <ping-chart></ping-chart> -->
+<!-- <impressions-chart></impressions-chart> -->
 
-<impressions-chart></impressions-chart>
-
-<img src="http://www.usnews.com/dims4/USNEWS/a95e643/2147483647/resize/652x%3E/quality/85/?url=%2Fcmsmedia%2F96%2F5c%2F73fdec4940669b780a79a8c8146e%2F140206-twittergraph-editorial.twitter.jpg" alt="placeholder" style="width:400px;"/>
-
-<img src="https://numberloving.files.wordpress.com/2012/03/piechart.png" alt="other placeholder" style="width:400px;"/>
+<iframe src="http://bl.ocks.org/tjdecke/raw/5558084/" height="430" scrolling="no"></iframe>
