--- a/app/ping/ping.html
+++ b/app/ping/ping.html
@@ -1,1 +1,8 @@
-<p>This is the partial for view 1.</p>
+<div>
+  <h3>Pings</h3>
+  <ul>
+    <li ng-repeat="ping in pings">
+      {{ping.event}}: Runs until {{ping.end}}
+    </li>
+  </ul>
+</div>
